# secureagent

./: .pre-commit-config.yaml  CAPABILITIES.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docker/: Dockerfile  Dockerfile.full  docker-compose.yml
docs/: CUSTOM_MODELS.md  PLAN.md  architecture.md  cli-reference.md  compliance.md  getting-started.md  how-it-works.md  integrations.md  scanners.md
examples/: github-action.yml  gitlab-ci.yml
models/: model_metadata.json  secureagent_risk_v1.pkl
scripts/: train_model.py
src/secureagent/: __init__.py  __main__.py
src/secureagent/analysis/: __init__.py  data_flow.py  egress.py  guardrails.py  permissions.py  prompt_analysis.py  risk_analyzer.py
src/secureagent/cli/: __init__.py  analyze_commands.py  app.py  cloud_commands.py  compat.py  compliance_commands.py  detect_commands.py  inventory_commands.py  mcp_commands.py  ml_commands.py  model_commands.py  multiagent_commands.py  rag_commands.py  scan_commands.py  test_commands.py
src/secureagent/compliance/: __init__.py  mapper.py  report_generator.py
src/secureagent/compliance/frameworks/: __init__.py  hipaa.py  owasp_llm.py  owasp_mcp.py  pci_dss.py  soc2.py
src/secureagent/core/: __init__.py  config.py
src/secureagent/core/alerting/: __init__.py  manager.py  slack.py  sns.py  webhook.py
src/secureagent/core/models/: __init__.py  agent.py  data_flow.py  finding.py  severity.py
src/secureagent/core/reporters/: __init__.py  console.py  html_reporter.py  json_reporter.py  sarif.py
src/secureagent/core/scanner/: __init__.py  base.py  registry.py
src/secureagent/detection/: __init__.py  jailbreak_detector.py  patterns.py
src/secureagent/detectors/: __init__.py  cloudtrail.py
src/secureagent/graph/: __init__.py  analyzer.py  cloud_extension.py  models.py  visualizer.py
src/secureagent/integrations/: __init__.py
src/secureagent/integrations/github/: __init__.py  issues.py  pr_comments.py  scanner.py
src/secureagent/integrations/gitlab/: __init__.py  integration.py
src/secureagent/integrations/slack/: __init__.py  bot.py  commands.py
src/secureagent/integrations/webhooks/: __init__.py  dispatcher.py
src/secureagent/inventory/: __init__.py  catalog.py  data_sources.py  discovery.py  models_registry.py  tools_registry.py
src/secureagent/ml/: __init__.py  model_manager.py  models.py  risk_scorer.py  trainer.py
src/secureagent/ml/features/: __init__.py  agent_features.py  base.py  cloud_features.py  mcp_features.py
src/secureagent/multiagent/: __init__.py  communication.py  delegation.py  frameworks.py  orchestration.py  scanner.py
src/secureagent/rag/: __init__.py  document_scanner.py  poisoning.py  scanner.py  vector_stores.py
src/secureagent/remediation/: __init__.py  fixer.py  generator.py
src/secureagent/scanners/: __init__.py
src/secureagent/scanners/autogpt/: __init__.py  models.py  rules.py  scanner.py
src/secureagent/scanners/aws/: __init__.py  scanner.py
src/secureagent/scanners/mcp/: models.py  (+3 more)
src/secureagent/testing/: __init__.py  injection_tester.py  payloads.py
tests/: conftest.py
tests/alerting/: __init__.py  test_manager.py
tests/analysis/: test_permissions.py
tests/cli/: test_app.py
tests/compliance/: test_mapper.py
tests/core/: test_models.py
tests/e2e/: test_full_scan.py
tests/graph/: test_analyzer.py  test_visualizer.py
tests/integrations/: test_webhooks.py
tests/inventory/: test_catalog.py
tests/ml/: test_risk_scorer.py
tests/performance/: __init__.py  conftest.py  test_cli_performance.py  test_ml_performance.py  test_scanner_performance.py
tests/remediation/: test_fixer.py  test_generator.py
tests/reporters/: test_reporters.py
tests/scanners/: test_autogpt_scanner.py  test_aws_scanner.py  test_langchain_scanner.py  test_mcp_scanner.py  test_openai_scanner.py  test_terraform_scanner.py
(+12 files in other folders)
