[tool.poetry]
name = "secureagent"
version = "1.0.0"
description = "Comprehensive AI & Cloud Security Platform - Unified security scanner for AI agents and cloud infrastructure"
authors = ["SecureAgent Team"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/secureagent/secureagent"
repository = "https://github.com/secureagent/secureagent"
keywords = ["security", "ai", "mcp", "langchain", "openai", "cloud", "aws", "azure", "terraform", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = "^3.9"

# Core dependencies (always installed)
typer = ">=0.9.0,<0.12.0"
click = ">=8.0.0,<8.2.0"
rich = "^14.2.0"
pydantic = "^2.5.0"
pyyaml = "^6.0.1"
httpx = "^0.25.0"

# Optional: Cloud providers
boto3 = { version = "^1.26.0", optional = true }
azure-identity = { version = "^1.12.0", optional = true }
azure-mgmt-storage = { version = "^21.0.0", optional = true }

# Optional: IaC scanning
python-hcl2 = { version = "^4.3.0", optional = true }

# Optional: ML features
numpy = { version = "^1.24.0", optional = true }
scikit-learn = { version = "^1.3.0", optional = true }

# Optional: AI framework scanning
langchain-core = { version = "^0.1.0", optional = true }
openai = { version = "^1.0.0", optional = true }

# Optional: Integrations
slack-sdk = { version = "^3.23.0", optional = true }
pygithub = { version = "^2.1.0", optional = true }

# Optional: Reporting
jinja2 = { version = "^3.1.0", optional = true }
weasyprint = { version = "^60.0", optional = true }

[tool.poetry.extras]
aws = ["boto3"]
azure = ["azure-identity", "azure-mgmt-storage"]
iac = ["python-hcl2"]
ml = ["numpy", "scikit-learn"]
langchain = ["langchain-core"]
openai = ["openai"]
slack = ["slack-sdk"]
github = ["pygithub"]
reports = ["jinja2", "weasyprint"]
full = [
    "boto3",
    "azure-identity",
    "azure-mgmt-storage",
    "python-hcl2",
    "numpy",
    "scikit-learn",
    "langchain-core",
    "openai",
    "slack-sdk",
    "pygithub",
    "jinja2",
    "weasyprint"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
black = "^23.12.0"
ruff = "^0.1.8"
mypy = "^1.7.0"
moto = "^4.0.0"
isort = "^5.13.0"
pre-commit = "^3.6.0"
types-PyYAML = "^6.0.0"
types-requests = "^2.31.0"
twine = "^4.0.0"
build = "^1.0.0"

[tool.poetry.scripts]
secureagent = "secureagent.cli.app:app"
mcpscan = "secureagent.cli.compat:mcpscan_main"
cybermonitor = "secureagent.cli.compat:cybermonitor_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["secureagent"]
skip_gitignore = true

[tool.coverage.run]
source = ["src/secureagent"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
